--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="css/style.css">
-		<!--<link rel="icon" type="image/png" href="images/favicon.png">-->
+
+		<link rel="shortcut icon" href="./images/favicon.ico" type="image/vnd.microsoft.icon">
+		<link rel="icon" href="./images/favicon.ico" type="image/vnd.microsoft.icon">
 		<script src="https://kit.fontawesome.com/da24a98278.js" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/jquery.inview.min.js"></script>
@@ -22,7 +24,7 @@
 			<div id="pc-header">
 				<div class="inner-header">
 					<div class="header-logo">
-						<a class="header-logoimg" href="index.html"><img src="./images/logo.svg" alt="ゆや"></a>
+						<a class="header-logoimg" href="shop.html" targe="_blank"><img src="./images/logo.svg" alt="ゆや"></a>
 						<div class="header-logotext">
 							<p class="header-subtitle">薬用入浴剤</p>
 							<img class="header-title" src="./images/main-title@2x.png" alt="地獄めぐりシリーズ">
@@ -33,7 +35,7 @@
 							<li><a href="#">Top</a></li>
 							<li><a href="index.html#about">About</a></li>
 							<li><a href="index.html#lineup">Line Up</a></li>
-							<li><a href="index.html#shop">Shop</a></li>
+							<li><a href="shop.html" target="_blank">Shop</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -46,12 +48,12 @@
 							<li><a href="#">Top</a></li>
 							<li><a href="index.html#about">About</a></li>
 							<li><a href="index.html#lineup">LineUp</a></li>
-							<li class="btn"><a class="btn-text" href="#">購入する<i class="fas fa-external-link-alt"></i></a></li>
+							<li class="btn"><a class="btn-text" href="shop.html" target="_blank">購入する<i class="fas fa-external-link-alt"></i></a></li>
 						</ul>
 					</div>
 				</nav>
 				<div class="mb-headerarea">
-					<div class="header-logoimg"><a href="index.html"><img src="./images/logo.svg" alt="ゆや"></a></div>
+					<div class="header-logoimg"><a href="shop.html" target="_blank"><img src="./images/logo.svg" alt="ゆや"></a></div>
 					<div class="toggle_btn">
 						<span></span>
 						<span></span>　
@@ -70,8 +72,8 @@
 					<source media="(max-width: 959px)" srcset="./images/yuya_main_l.png, ./images/yuya_main_l@2x.png 2x">
 					<img src="./images/yuya_main_l.png" alt="ゆやトップ画像">
 				</picture>
-				<div class="scroll">
-					<span class="txt">Scroll</span>
+				<div class="scrolldown">
+					<span>Scroll</span>
 				</div>
 
 			</div>
@@ -226,7 +228,7 @@
 
 			<div id="shop" class="inner">
 				<p class="shop-text">オンラインショップのサイトへ移動します。</p>
-				<div class="btn"><a class="btn-text" href="#">購入する<i class="fas fa-external-link-alt"></i></a></div>
+				<div class="btn"><a class="btn-text" href="shop.html" target="_blank">購入する<i class="fas fa-external-link-alt"></i></a></div>
 			</div>
 		</main>
 		<footer>
@@ -282,12 +284,12 @@
 			var pagetop = $('#page-top');
 			var pcheader = $('#pc-header');
 			$(window).scroll(function () {
-				if ($(this).scrollTop() > 100) {  //100pxスクロールしたら
+				if ($(this).scrollTop() > 100) {
 					if (appear == false) {
 						appear = true;
 						pagetop.stop().css({opacity: '1.0'}).animate({
-							'bottom': '50px'  //下から50pxの位置に
-						}, 500); //0.5秒かけて現れる
+							'bottom': '50px'
+						}, 500);
 						pcheader.stop().css({opacity: '1.0'}).animate({
 							top: 0
 						}, 500);
@@ -296,8 +298,8 @@
 					if (appear) {
 						appear = false;
 						pagetop.stop().animate({
-						'bottom': '-50px',opacity: 0 //下から-50pxの位置に
-						}, 500); //0.5秒かけて隠れる
+						'bottom': '-50px',opacity: 0
+						}, 500);
 						pcheader.stop().animate({
 						top:"-66px",opacity: 0
 						}, 500);
@@ -306,7 +308,7 @@
 			});
 
 			pagetop.click(function () {
-				$('body, html').animate({ scrollTop: 0 }, 500); //0.5秒かけてトップへ戻る
+				$('body, html').animate({ scrollTop: 0 }, 500);
 				return false;
 			});
 		});
