--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div id="pc-header">
 				<div class="inner-header">
 					<div class="header-logo">
-						<a class="header-logoimg" href="shop.html" targe="_blank"><img src="./images/logo.svg" alt="ゆや"></a>
+						<a class="header-logoimg" href="shop.html" target="_blank"><img src="./images/logo.svg" alt="ゆや"></a>
 						<div class="header-logotext">
 							<p class="header-subtitle">薬用入浴剤</p>
 							<img class="header-title" src="./images/main-title@2x.png" alt="地獄めぐりシリーズ">
